<resources>
    <string name="app_name">User</string>
    <string name="title_activity_maps">Map</string>
    <string name="tamil">எங்கேயும் எப்போதும்</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="Trip">Trip</string>
    <string name="Bookings">Bookings</string>
    <string name="Track_another_trip">Track another trip</string>
    <string name="Track_driver">Tracking</string>
    <string name="contact_us">Contact us</string>
    <string name="Remarks">Remarks</string>
    <string name="about_us">about us</string>
    <string name="local_trip">LocalTrip</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
