<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"

            android:title="@string/profile" />
        <item
            android:id="@+id/trip"

            android:title="@string/Trip" />
        <item
            android:id="@+id/bookings"

            android:title="@string/Bookings" />
        <item
            android:id="@+id/track_another_trip"

            android:title="@string/Track_another_trip" />
        <item
            android:id="@+id/remarks"

            android:title="@string/Remarks" />
        <item
            android:id="@+id/about_us"

            android:title="@string/about_us" />
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us"/>
    </group>


</menu>
